--- a/machine_learning_classification_bootcamp_in_python/py/4_DecisionTree_RandomForest/my_DecisionTree.ipynb
+++ b/machine_learning_classification_bootcamp_in_python/py/4_DecisionTree_RandomForest/my_DecisionTree.ipynb
@@ -5081,18 +5081,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
   },
   {
    "cell_type": "code",
