--- a/machine_learning_imbalanced_data/Section-03-Metrics/4_Balanced_accuracy.ipynb
+++ b/machine_learning_imbalanced_data/Section-03-Metrics/4_Balanced_accuracy.ipynb
@@ -2652,6 +2652,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Recall baseline, class 0 and 1: [1. 0.]\n",
+      "Recall RF, class 0 and 1: [0.99997692 0.57530864]\n",
+      "Recall LR, class 0 and 1: [0.99965375 0.71111111]\n",
+      "      \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\"\"\n",
+    "Recall baseline, class 0 and 1: {recall_score(y_test, y_test_base, average=None)}\n",
+    "Recall RF, class 0 and 1: {recall_score(y_test, rf.predict(X_test), average = None)}\n",
+    "Recall LR, class 0 and 1: {recall_score(y_test, lr.predict(X_test), average=None)}\n",
+    "      \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
    "outputs": [
