--- a/machine_learning_imbalanced_data/Section-03-Metrics/5_Geometric_mean_Dominance_IBA.ipynb
+++ b/machine_learning_imbalanced_data/Section-03-Metrics/5_Geometric_mean_Dominance_IBA.ipynb
@@ -2865,17 +2865,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import balanced_accuracy_score as bas"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Balanced accuracy score, baseline: 0.5\n",
+      "Balanced accuracy score, rf: 0.7876427792411572\n",
+      "Balanced accuracy score, lr: 0.8553824293580994\n",
+      "      \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\"\"\n",
+    "Balanced accuracy score, baseline: {bas(y_test, y_test_base)}\n",
+    "Balanced accuracy score, rf: {bas(y_test, rf.predict(X_test))}\n",
+    "Balanced accuracy score, lr: {bas(y_test, lr.predict(X_test))}\n",
+    "      \"\"\")"
+   ]
   },
   {
    "cell_type": "code",
