--- a/machine_learning_imbalanced_data/Section-03-Metrics/5_Geometric_mean_Dominance_IBA.ipynb
+++ b/machine_learning_imbalanced_data/Section-03-Metrics/5_Geometric_mean_Dominance_IBA.ipynb
@@ -743,6 +743,287 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2.0)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import recall_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mSignature:\u001b[0m\n",
+      "\u001b[0mrecall_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0;34m*\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mlabels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mpos_label\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0maverage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'binary'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mzero_division\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'warn'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "Compute the recall.\n",
+      "\n",
+      "The recall is the ratio ``tp / (tp + fn)`` where ``tp`` is the number of\n",
+      "true positives and ``fn`` the number of false negatives. The recall is\n",
+      "intuitively the ability of the classifier to find all the positive samples.\n",
+      "\n",
+      "The best value is 1 and the worst value is 0.\n",
+      "\n",
+      "Support beyond term:`binary` targets is achieved by treating :term:`multiclass`\n",
+      "and :term:`multilabel` data as a collection of binary problems, one for each\n",
+      "label. For the :term:`binary` case, setting `average='binary'` will return\n",
+      "recall for `pos_label`. If `average` is not `'binary'`, `pos_label` is ignored\n",
+      "and recall for both classes are computed then averaged or both returned (when\n",
+      "`average=None`). Similarly, for :term:`multiclass` and :term:`multilabel` targets,\n",
+      "recall for all `labels` are either returned or averaged depending on the `average`\n",
+      "parameter. Use `labels` specify the set of labels to calculate recall for.\n",
+      "\n",
+      "Read more in the :ref:`User Guide <precision_recall_f_measure_metrics>`.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "y_true : 1d array-like, or label indicator array / sparse matrix\n",
+      "    Ground truth (correct) target values.\n",
+      "\n",
+      "y_pred : 1d array-like, or label indicator array / sparse matrix\n",
+      "    Estimated targets as returned by a classifier.\n",
+      "\n",
+      "labels : array-like, default=None\n",
+      "    The set of labels to include when `average != 'binary'`, and their\n",
+      "    order if `average is None`. Labels present in the data can be\n",
+      "    excluded, for example in multiclass classification to exclude a \"negative\n",
+      "    class\". Labels not present in the data can be included and will be\n",
+      "    \"assigned\" 0 samples. For multilabel targets, labels are column indices.\n",
+      "    By default, all labels in `y_true` and `y_pred` are used in sorted order.\n",
+      "\n",
+      "    .. versionchanged:: 0.17\n",
+      "       Parameter `labels` improved for multiclass problem.\n",
+      "\n",
+      "pos_label : int, float, bool or str, default=1\n",
+      "    The class to report if `average='binary'` and the data is binary,\n",
+      "    otherwise this parameter is ignored.\n",
+      "    For multiclass or multilabel targets, set `labels=[pos_label]` and\n",
+      "    `average != 'binary'` to report metrics for one label only.\n",
+      "\n",
+      "average : {'micro', 'macro', 'samples', 'weighted', 'binary'} or None,             default='binary'\n",
+      "    This parameter is required for multiclass/multilabel targets.\n",
+      "    If ``None``, the metrics for each class are returned. Otherwise, this\n",
+      "    determines the type of averaging performed on the data:\n",
+      "\n",
+      "    ``'binary'``:\n",
+      "        Only report results for the class specified by ``pos_label``.\n",
+      "        This is applicable only if targets (``y_{true,pred}``) are binary.\n",
+      "    ``'micro'``:\n",
+      "        Calculate metrics globally by counting the total true positives,\n",
+      "        false negatives and false positives.\n",
+      "    ``'macro'``:\n",
+      "        Calculate metrics for each label, and find their unweighted\n",
+      "        mean.  This does not take label imbalance into account.\n",
+      "    ``'weighted'``:\n",
+      "        Calculate metrics for each label, and find their average weighted\n",
+      "        by support (the number of true instances for each label). This\n",
+      "        alters 'macro' to account for label imbalance; it can result in an\n",
+      "        F-score that is not between precision and recall. Weighted recall\n",
+      "        is equal to accuracy.\n",
+      "    ``'samples'``:\n",
+      "        Calculate metrics for each instance, and find their average (only\n",
+      "        meaningful for multilabel classification where this differs from\n",
+      "        :func:`accuracy_score`).\n",
+      "\n",
+      "sample_weight : array-like of shape (n_samples,), default=None\n",
+      "    Sample weights.\n",
+      "\n",
+      "zero_division : {\"warn\", 0.0, 1.0, np.nan}, default=\"warn\"\n",
+      "    Sets the value to return when there is a zero division.\n",
+      "\n",
+      "    Notes:\n",
+      "\n",
+      "    - If set to \"warn\", this acts like 0, but a warning is also raised.\n",
+      "    - If set to `np.nan`, such values will be excluded from the average.\n",
+      "\n",
+      "    .. versionadded:: 1.3\n",
+      "       `np.nan` option was added.\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "recall : float (if average is not None) or array of float of shape              (n_unique_labels,)\n",
+      "    Recall of the positive class in binary classification or weighted\n",
+      "    average of the recall of each class for the multiclass task.\n",
+      "\n",
+      "See Also\n",
+      "--------\n",
+      "precision_recall_fscore_support : Compute precision, recall, F-measure and\n",
+      "    support for each class.\n",
+      "precision_score : Compute the ratio ``tp / (tp + fp)`` where ``tp`` is the\n",
+      "    number of true positives and ``fp`` the number of false positives.\n",
+      "balanced_accuracy_score : Compute balanced accuracy to deal with imbalanced\n",
+      "    datasets.\n",
+      "multilabel_confusion_matrix : Compute a confusion matrix for each class or\n",
+      "    sample.\n",
+      "PrecisionRecallDisplay.from_estimator : Plot precision-recall curve given\n",
+      "    an estimator and some data.\n",
+      "PrecisionRecallDisplay.from_predictions : Plot precision-recall curve given\n",
+      "    binary class predictions.\n",
+      "\n",
+      "Notes\n",
+      "-----\n",
+      "When ``true positive + false negative == 0``, recall returns 0 and raises\n",
+      "``UndefinedMetricWarning``. This behavior can be modified with\n",
+      "``zero_division``.\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      ">>> import numpy as np\n",
+      ">>> from sklearn.metrics import recall_score\n",
+      ">>> y_true = [0, 1, 2, 0, 1, 2]\n",
+      ">>> y_pred = [0, 2, 1, 0, 0, 1]\n",
+      ">>> recall_score(y_true, y_pred, average='macro')\n",
+      "0.33...\n",
+      ">>> recall_score(y_true, y_pred, average='micro')\n",
+      "0.33...\n",
+      ">>> recall_score(y_true, y_pred, average='weighted')\n",
+      "0.33...\n",
+      ">>> recall_score(y_true, y_pred, average=None)\n",
+      "array([1., 0., 0.])\n",
+      ">>> y_true = [0, 0, 0, 0, 0, 0]\n",
+      ">>> recall_score(y_true, y_pred, average=None)\n",
+      "array([0.5, 0. , 0. ])\n",
+      ">>> recall_score(y_true, y_pred, average=None, zero_division=1)\n",
+      "array([0.5, 1. , 1. ])\n",
+      ">>> recall_score(y_true, y_pred, average=None, zero_division=np.nan)\n",
+      "array([0.5, nan, nan])\n",
+      "\n",
+      ">>> # multilabel classification\n",
+      ">>> y_true = [[0, 0, 0], [1, 1, 1], [0, 1, 1]]\n",
+      ">>> y_pred = [[0, 0, 0], [1, 1, 1], [1, 1, 0]]\n",
+      ">>> recall_score(y_true, y_pred, average=None)\n",
+      "array([1. , 1. , 0.5])\n",
+      "\u001b[0;31mFile:\u001b[0m      ~/Udemy/Udemy/machine_learning_imbalanced_data/.venv/lib/python3.10/site-packages/sklearn/metrics/_classification.py\n",
+      "\u001b[0;31mType:\u001b[0m      function"
+     ]
+    }
+   ],
+   "source": [
+    "?recall_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def geometric_mean_manual(y_true, y_pred):\n",
+    "\n",
+    "    TPR = recall_score(y_true, y_pred, pos_label=1)\n",
+    "    TNR = recall_score(y_true, y_pred, pos_label=0)\n",
+    "    gmean = np.sqrt(TPR * TNR)\n",
+    "\n",
+    "    return gmean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.0)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "geometric_mean_manual(y_test, y_test_base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Test geometric mean baseline: 0.0\n",
+      "Test geometric mean rf: 0.7584822752327849\n",
+      "Test geometric mean lr: 0.8431280372433596\n",
+      "      \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\"\"\n",
+    "Test geometric mean baseline: {geometric_mean_manual(y_test, y_test_base)}\n",
+    "Test geometric mean rf: {geometric_mean_manual(y_test, rf.predict(X_test))}\n",
+    "Test geometric mean lr: {geometric_mean_manual(y_test, lr.predict(X_test))}\n",
+    "      \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Test geometric mean baseline: 0.0\n",
+      "Test geometric mean rf: 0.758482275232785\n",
+      "Test geometric mean lr: 0.8431280372433597\n",
+      "      \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\"\"\n",
+    "Test geometric mean baseline: {geometric_mean_score(y_test, y_test_base)}\n",
+    "Test geometric mean rf: {geometric_mean_score(y_test, rf.predict(X_test))}\n",
+    "Test geometric mean lr: {geometric_mean_score(y_test, lr.predict(X_test))}\n",
+    "      \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
