--- a/machine_learning_imbalanced_data/5_Undersampling/1.1_Random_undersampling.ipynb
+++ b/machine_learning_imbalanced_data/5_Undersampling/1.1_Random_undersampling.ipynb
@@ -4340,17 +4340,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.datasets import make_classification"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['FunctionSampler',\n",
+       " 'LazyLoader',\n",
+       " '__IMBLEARN_SETUP__',\n",
+       " '__all__',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__path__',\n",
+       " '__spec__',\n",
+       " '__version__',\n",
+       " '_version',\n",
+       " 'base',\n",
+       " 'combine',\n",
+       " 'ensemble',\n",
+       " 'exceptions',\n",
+       " 'importlib',\n",
+       " 'keras',\n",
+       " 'metrics',\n",
+       " 'over_sampling',\n",
+       " 'pipeline',\n",
+       " 'show_versions',\n",
+       " 'sys',\n",
+       " 'tensorflow',\n",
+       " 'types',\n",
+       " 'under_sampling',\n",
+       " 'utils']"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(imblearn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AllKNN',\n",
+       " 'ClusterCentroids',\n",
+       " 'CondensedNearestNeighbour',\n",
+       " 'EditedNearestNeighbours',\n",
+       " 'InstanceHardnessThreshold',\n",
+       " 'NearMiss',\n",
+       " 'NeighbourhoodCleaningRule',\n",
+       " 'OneSidedSelection',\n",
+       " 'RandomUnderSampler',\n",
+       " 'RepeatedEditedNearestNeighbours',\n",
+       " 'TomekLinks',\n",
+       " '__all__',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__path__',\n",
+       " '__spec__',\n",
+       " '_prototype_generation',\n",
+       " '_prototype_selection',\n",
+       " 'base']"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(imblearn.under_sampling)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from imblearn.under_sampling import RandomUnderSampler"
+   ]
   },
   {
    "cell_type": "code",
